# add_subdirectory(simple_factory)
# add_subdirectory(strategy)
# add_subdirectory(proxy)
# add_subdirectory(decorate)
# add_subdirectory(factory)
# add_subdirectory(prototype)
# add_subdirectory(template)
# add_subdirectory(facade)
# add_subdirectory(builder)
# add_subdirectory(observer)
# add_subdirectory(state)
# add_subdirectory(memento)
# add_subdirectory(component)
# add_subdirectory(singleton)
# add_subdirectory(bridge)
# add_subdirectory(command)
# add_subdirectory(handle)
# add_subdirectory(mediator)
# add_subdirectory(flyWight)
# add_subdirectory(interpreter)
# add_subdirectory(visit)
add_subdirectory(adapter)