# add_subdirectory(singleton)
add_subdirectory(builder)
add_subdirectory(simple_factory)
add_subdirectory(factory)
add_subdirectory(prototype)

add_subdirectory(adapter)
add_subdirectory(decorate)
add_subdirectory(proxy)
add_subdirectory(iterator)
add_subdirectory(facade)
add_subdirectory(bridge)
add_subdirectory(flyWight)

add_subdirectory(strategy)
add_subdirectory(template)
add_subdirectory(observer)
add_subdirectory(state)
add_subdirectory(command)
add_subdirectory(memento)
add_subdirectory(handle)
add_subdirectory(mediator)
add_subdirectory(interpreter)
add_subdirectory(visit)
